--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PyBuddy Junior Web</title>
+  <title>PyBuddy </title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -44,7 +44,7 @@
   </style>
 </head>
 <body>
-<header>🐍 PyBuddy Junior: Python Course</header>
+<header>🐍 PyBuddy</header>
 <nav>
   <button class="tab active" data-tab="home">🏠 Home</button>
   <button class="tab" data-tab="learn">📘 Learn</button>
